# howto

nltk/: main.py
python_api_from_cpp/ctypes/src/: mylib.h
python_api_from_cpp/pybind11/: README
python_api_from_cpp/swig/example/: CMakeLists.txt  README  example.c
python_binding/boost_python/: README  greet.cpp  greet.h  greet_ext.cpp
python_binding/ctypes/: CMakeLists.txt  README
python_binding/ctypes/api/: main.py
python_binding/ctypes/src/: CMakeLists.txt  mylib.c  mylib.h
python_binding/cython/: README.txt  hello.c  hello_caller.c  hello_caller.pyx  setup.hello_caller.py
python_binding/pybind11/: CMakeLists.txt  abstract.cpp  abstract.hpp  base.hpp  example.cpp  test.py
python_binding/swig/example/: example.c  example.i
sklearn/: digits.py  knn.py
